--- a/pagina.html
+++ b/pagina.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div>codigo people</div>
+    <div>codigo people ehq</div>
     <div>front people</div>
     <div>front ehq</div>
 </body>
