--- a/pagina.html
+++ b/pagina.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div>codigo people</div>
-    <div>front people</div>
+    <div>front people mmmmmm</div>
     <div>front ehq</div>
 </body>
 </html>
