agregue otra linea ehq-1214

--- a/pagina.html
+++ b/pagina.html
@@ -6,13 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-<<<<<<< HEAD
-    <div>codigo people</div>
-    <div>front people mmmmmm</div>
-=======
     <div>codigo people ehq</div>
     <div>front people</div>
->>>>>>> ehq
     <div>front ehq</div>
+    <div>front de ehq-1214</div>
 </body>
 </html>
