--- a/pagina.html
+++ b/pagina.html
@@ -11,5 +11,6 @@
     <div>front ehq</div>
     <div>front de ehq-1214</div>
     <div>body de ehq</div>
+    <div>body de ingenioso</div>
 </body>
 </html>
