--- a/pagina.html
+++ b/pagina.html
@@ -10,6 +10,6 @@
     <div>front people</div>
     <div>front ehq</div>
     <div>front de ehq-1214</div>
-    <div>body de ingenioso</div>
+    <div>body de ingeniosohq</div>
 </body>
 </html>
